tsyringe added to project and swagger bettered
