# assets/swagger.json
@@ -1,15 +1,12 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "Rentx Documentation",
-    "description": "This is an API Rent",
+    "title": "RentX Documentation",
+    "description": "This is an API RentX",
     "version": "1.0.0",
     "contact": { "email": "tarcisiopgs@gmail.com" }
   },
   "paths": {
-    "/categories/import": {
-      "post": {}
-    },
     "/categories": {
       "post": {
         "tags": ["Category"],
@@ -80,6 +77,33 @@
         }
       }
     },
+    "/categories/import": {
+      "post": {
+        "tags": ["Category"],
+        "summary": "Upload a new categories",
+        "description": "Upload a new categories",
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "file": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Categories created"
+          }
+        }
+      }
+    },
     "/specifications": {
       "post": {
         "tags": ["Specification"],
@@ -89,19 +113,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "description": {
-                    "type": "string"
-                  }
-                },
-                "example": {
-                  "name": "Specification name sample",
-                  "description": "Specification description sample"
-                }
+                "$ref": "#/definitions/Specification"
               }
             }
           }
@@ -148,6 +160,23 @@
             }
           }
         }
+      }
+    }
+  },
+  "definitions": {
+    "Specification": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      },
+      "example": {
+        "name": "Specification name sample",
+        "description": "Specification description sample"
       }
     }
   }
