# src/routes/categories.routes.ts
@@ -1,23 +1,27 @@
 import { Router } from 'express';
 import multer from 'multer';
+import { container } from 'tsyringe';
 
-import createCategoryController from '../modules/cars/useCases/createCategory';
-import importCategoriesController from '../modules/cars/useCases/importCategories';
-import listCategoriesController from '../modules/cars/useCases/listCategories';
+import CreateCategoryController from '../modules/cars/useCases/createCategory/CreateCategoryController';
+import ImportCategoriesController from '../modules/cars/useCases/importCategories/ImportCategoriesController';
+import ListCategoriesController from '../modules/cars/useCases/listCategories/ListCategoriesController';
 
 const categoriesRoutes = Router();
 const upload = multer({ dest: './tmp' });
+const createCategoryController = container.resolve(CreateCategoryController);
+const importCategoriesController = container.resolve(
+  ImportCategoriesController
+);
+const listCategoriesController = container.resolve(ListCategoriesController);
 
-categoriesRoutes.get('/', (request, response) => {
-  return listCategoriesController().handle(request, response);
-});
+categoriesRoutes.get('/', listCategoriesController.handle);
 
-categoriesRoutes.post('/', (request, response) => {
-  return createCategoryController().handle(request, response);
-});
+categoriesRoutes.post('/', createCategoryController.handle);
 
-categoriesRoutes.post('/import', upload.single('file'), (request, response) => {
-  return importCategoriesController().handle(request, response);
-});
+categoriesRoutes.post(
+  '/import',
+  upload.single('file'),
+  importCategoriesController.handle
+);
 
 export default categoriesRoutes;
